welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:3: error: 'case' expected but '(' found.
    (10,  _) => true ;
    ^makes10:3: error: '}' expected but ';' found.
    (10,  _) => true ;
                     ^makes10:4: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
    ( _, 10) => true ;
         ^makes10:7: error: eof expected but '}' found.
 }
 ^